# codecomp

./: .gitignore  README.md  compose.yaml  main.py  pyproject.toml  queue_messages.py  server.Dockerfile  worker.Dockerfile  worker.py
codecomp/: __init__.py  client.py  depends.py  enviroment_generators.py  error.py  worker.py  worker_result_register.py
codecomp/resolve/: __init__.py  handlers.py  repository.py
codecomp/task/: __init__.py  handlers.py  repository.py
codecomp/templates/: tasks.html
codecomp/user/: __init__.py  handlers.py  repository.py
leetcode_analog/: __init__.py  depends.py  helper.py  worker.py  worker_result_register.py
leetcode_analog/resolve/: __init__.py  handlers.py  repository.py
leetcode_analog/task/: __init__.py  handlers.py  repository.py
leetcode_analog/user/: __init__.py  handlers.py  repository.py
static/ace/: ext-modelist.js  ext-options.js  ext-prompt.js  ext-settings_menu.js
static/styles/: styles.css
templates/: task.html  tasks.html
worker/: __init__.py
