[tool.poetry]
name = "codecomp"
version = "0.1.0"
description = ""
authors = ["Forder <lohhhti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
redis = "^5.0.7"
bcrypt = "^4.1.3"
faststream = { extras = ["rabbit"], version = "^0.5.14" }
psutil = "^6.0.0"
jinja2 = "^3.1.4"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
